Adding GitHub picture

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<h1>Léonard Allain-Launay</h1>
 		<div class="bubbles">
 			
-			<div class="bubble"></div>
+			<div class="github bubble"></div>
 			<div class="bubble"></div>
 			<div class="bubble"></div>
 			<div class="bubble"></div>
