Adding gitHub bubble link

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 		<h1>Léonard Allain-Launay</h1>
 		<div class="bubbles">
 			
-			<div class="github bubble"></div>
-			<div class="bubble"></div>
-			<div class="bubble"></div>
-			<div class="bubble"></div>
+			<a href="https://github.com/LeonardA-L" target="_blank" class="github bubble"></a>
+			<a class="bubble" target="_blank"></a>
+			<a class="bubble" target="_blank"></a>
+			<a class="bubble" target="_blank"></a>
 		
 		</div>
 	</div>
