Adding CodinGames pictures

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 		<div class="bubbles">
 			
 			<a href="https://github.com/LeonardA-L" target="_blank" class="github bubble"></a>
-			<a class="bubble" target="_blank"></a>
-			<a class="bubble" target="_blank"></a>
+			<a class="en bubble" target="_blank"></a>
+			<a class="fr bubble" target="_blank"></a>
 			<a class="bubble" target="_blank"></a>
 		
 		</div>
