Added links for resumes (FR and EN)

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 		<div class="bubbles">
 			
 			<a href="https://github.com/LeonardA-L" target="_blank" class="github bubble"></a>
-			<a class="en bubble" target="_blank"></a>
-			<a class="fr bubble" target="_blank"></a>
+			<a href="cv_LeonardA-L_EN.pdf" class="en bubble" target="_blank"></a>
+			<a href="cv_LeonardA-L_FR.pdf" class="fr bubble" target="_blank"></a>
 			<a href="http://www.codingame.com/profile/1f902a3213291dfd0de802207d362bdf979991" class="cg bubble" target="_blank"></a>
 		
 		</div>
