Adding resumes files

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 		<div class="bubbles">
 			
 			<a href="https://github.com/LeonardA-L" target="_blank" class="github bubble"></a>
-			<a href="cv_LeonardA-L_EN.pdf" class="en bubble" target="_blank"></a>
-			<a href="cv_LeonardA-L_FR.pdf" class="fr bubble" target="_blank"></a>
+			<a href="cv_Leonard_Allain-Launay_EN.pdf" class="en bubble" target="_blank"></a>
+			<a href="cv_Leonard_Allain-Launay_FR.pdf" class="fr bubble" target="_blank"></a>
 			<a href="http://www.codingame.com/profile/1f902a3213291dfd0de802207d362bdf979991" class="cg bubble" target="_blank"></a>
 		
 		</div>
@@ -27,7 +27,7 @@
 
 </div>
 	<div class="meta_wrap">
-		<p class="meta">Hi, I'm Léonard. A computer sciences engineering student at INSA Lyon (France). If you're looking for me, I am probably at my computer randomly hitting the keyboard. I am currently actively seeking a three months internship during summer 2015. I am french, I like music, sometimes even go outside. If you want to share something with me, projects you'd like me to join you on, or just want to say hi, you can contact me by opening an issue <a href="https://github.com/LeonardA-L/LeonardA-L.github.io/issues">here</a> :) </p>
+		<p class="meta">Hi, I'm Léonard. A computer sciences engineering student at INSA Lyon (France). If you're looking for me, I am probably at my computer randomly hitting the keyboard. I am currently actively seeking a three months internship during summer 2015. I am french, I like music, sometimes even go outside. If you want to share something with me, projects you'd like me to join you on, or just want to say hi, you can contact me by opening an issue <a href="https://github.com/LeonardA-L/LeonardA-L.github.io/issues" target="_blank">here</a> :) </p>
 	</div>
 </div>
 </body>
