--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 			<a href="https://github.com/LeonardA-L" target="_blank" class="github bubble"></a>
 			<a href="cv_Leonard_Allain-Launay_EN.pdf" class="en bubble" target="_blank"></a>
 			<a href="cv_Leonard_Allain-Launay_FR.pdf" class="fr bubble" target="_blank"></a>
+			<a href="http://linkedin.com/pub/l%C3%A9onard-allain-launay/86/a38/2a1/" class="in bubble" target="_blank"></a>
 			<a href="http://www.codingame.com/profile/1f902a3213291dfd0de802207d362bdf979991" class="cg bubble" target="_blank"></a>
 		
 		</div>
