--- a/index.html
+++ b/index.html
@@ -17,11 +17,26 @@
 		<h1>Léonard Allain-Launay</h1>
 		<div class="bubbles">
 			
-			<a href="https://github.com/LeonardA-L" target="_blank" class="github bubble"></a>
-			<a href="cv_Leonard_Allain-Launay_EN.pdf" class="en bubble" target="_blank"></a>
-			<a href="cv_Leonard_Allain-Launay_FR.pdf" class="fr bubble" target="_blank"></a>
-			<a href="http://linkedin.com/pub/l%C3%A9onard-allain-launay/86/a38/2a1/" class="in bubble" target="_blank"></a>
-			<a href="http://www.codingame.com/profile/1f902a3213291dfd0de802207d362bdf979991" class="cg bubble" target="_blank"></a>
+			<a href="https://github.com/LeonardA-L" target="_blank" class="bubble">
+				<span class="github subbubble btnnoh"></span>
+				<span class="githubh subbubble btnh"></span>
+			</a>
+			<a href="cv_Leonard_Allain-Launay_EN.pdf" class="bubble" target="_blank">
+				<span class="en subbubble btnnoh"></span>
+				<span class="enh subbubble btnh"></span>
+			</a>
+			<a href="cv_Leonard_Allain-Launay_FR.pdf" class="bubble" target="_blank">
+				<span class="fr subbubble btnnoh"></span>
+				<span class="frh subbubble btnh"></span>
+			</a>
+			<a href="http://linkedin.com/pub/l%C3%A9onard-allain-launay/86/a38/2a1/" class="bubble" target="_blank">
+				<span class="in subbubble btnnoh"></span>
+				<span class="inh subbubble btnh"></span>
+			</a>
+			<a href="http://www.codingame.com/profile/1f902a3213291dfd0de802207d362bdf979991" class="bubble" target="_blank">
+				<span class="cg subbubble btnnoh"></span>
+				<span class="cgh subbubble btnh"></span>
+			</a>
 		
 		</div>
 	</div>
