--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 </div>
 	<div class="meta_wrap">
-		<p class="meta">Hi, I'm Léonard. A computer sciences engineering student at INSA Lyon (France). If you're looking for me, I am probably at my computer randomly hitting the keyboard. I am currently actively seeking a three months internship during summer 2015. I am french, I like music, sometimes even go outside. If you want to share something with me, have projects you'd like me to join you on, or just want to say hi, you can contact me by opening an issue <a href="https://github.com/LeonardA-L/LeonardA-L.github.io/issues" target="_blank">here</a> :) </p>
+		<p class="meta">Hi, I'm Léonard. A computer sciences engineering student at INSA Lyon (France). If you're looking for me, I am probably at my computer randomly hitting the keyboard. I am currently actively seeking a five to six months internship during the second semester of 2016. I am french, I like music, sometimes even go outside. If you want to share something with me, have projects you'd like me to join you on, or just want to say hi, please drop me a line at leonard.allain-launay@insa-lyon.fr :) </p>
 	</div>
 </div>
 </body>
