--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 </div>
 	<div class="meta_wrap">
-		<p class="meta">Hi, I'm Léonard. A computer sciences engineering student at INSA Lyon (France). I am currently full-stack intern at <a href="https://www.codingame.com">CodinGame</a>. I am french, I like music, sometimes I even go outside. If you want to share something with me, have projects you'd like me to join you on, or just want to say hi, please drop me a line at <a href="mailto:leonard.allain-launay@insa-lyon.fr">leonard.allain-launay@insa-lyon.fr</a> :) </p>
+		<p class="meta">Hi, I'm Leonard. A software developer based in San Francisco. I am currently a Growth Engineer at <a href="https://www.codingame.com">CodinGame</a>. I am french, I like music, sometimes I even go outside. If you want to share something with me, have projects you'd like me to join you on, or just want to say hi, please drop me a line at <a href="mailto:leonard.allain-launay@insa-lyon.fr">leonard.allain-launay@insa-lyon.fr</a> :) </p>
 	</div>
 </div>
 </body>
