--- a/index.html
+++ b/index.html
@@ -11,39 +11,56 @@
 <body>
 	<div class="hShadow"></div>
 
-<div class="circle shadow">
+	<div class="circle shadow">
 
-	<div class="part">
-		<h1>Léonard Allain-Launay</h1>
-		<div class="bubbles">
+		<div class="part">
+			<h1>Leonard Allain-Launay</h1>
+			<div class="bubbles">
+				
+				<a href="https://github.com/LeonardA-L" target="_blank" class="bubble">
+					<span class="github subbubble btnnoh"></span>
+					<span class="githubh subbubble btnh"></span>
+				</a>
+				<a href="cv_Leonard_Allain-Launay_EN.pdf" class="bubble" target="_blank">
+					<span class="en subbubble btnnoh"></span>
+					<span class="enh subbubble btnh"></span>
+				</a>
+				<a href="cv_Leonard_Allain-Launay_FR.pdf" class="bubble" target="_blank">
+					<span class="fr subbubble btnnoh"></span>
+					<span class="frh subbubble btnh"></span>
+				</a>
+				<a href="http://linkedin.com/pub/l%C3%A9onard-allain-launay/86/a38/2a1/" class="bubble" target="_blank">
+					<span class="in subbubble btnnoh"></span>
+					<span class="inh subbubble btnh"></span>
+				</a>
+				<a href="http://www.codingame.com/profile/1f902a3213291dfd0de802207d362bdf979991" class="bubble" target="_blank">
+					<span class="cg subbubble btnnoh"></span>
+					<span class="cgh subbubble btnh"></span>
+				</a>
 			
-			<a href="https://github.com/LeonardA-L" target="_blank" class="bubble">
-				<span class="github subbubble btnnoh"></span>
-				<span class="githubh subbubble btnh"></span>
-			</a>
-			<a href="cv_Leonard_Allain-Launay_EN.pdf" class="bubble" target="_blank">
-				<span class="en subbubble btnnoh"></span>
-				<span class="enh subbubble btnh"></span>
-			</a>
-			<a href="cv_Leonard_Allain-Launay_FR.pdf" class="bubble" target="_blank">
-				<span class="fr subbubble btnnoh"></span>
-				<span class="frh subbubble btnh"></span>
-			</a>
-			<a href="http://linkedin.com/pub/l%C3%A9onard-allain-launay/86/a38/2a1/" class="bubble" target="_blank">
-				<span class="in subbubble btnnoh"></span>
-				<span class="inh subbubble btnh"></span>
-			</a>
-			<a href="http://www.codingame.com/profile/1f902a3213291dfd0de802207d362bdf979991" class="bubble" target="_blank">
-				<span class="cg subbubble btnnoh"></span>
-				<span class="cgh subbubble btnh"></span>
-			</a>
-		
+			</div>
 		</div>
-	</div>
 
-</div>
+	</div>
 	<div class="meta_wrap">
-		<p class="meta">Hi, I'm Leonard. A software developer based in San Francisco. I am currently a Growth Engineer at <a href="https://www.codingame.com">CodinGame</a>. I am french, I like music, sometimes I even go outside. If you want to share something with me, have projects you'd like me to join you on, or just want to say hi, please drop me a line at <a href="mailto:leonard.allain-launay@insa-lyon.fr">leonard.allain-launay@insa-lyon.fr</a> :) </p>
+		<p class="meta">Hi, I'm Leonard. A software developer based in San Francisco. I am currently a Growth Engineer at <a href="https://www.codingame.com">CodinGame</a>.</p>
+	</div>
+	<div class="technologies">
+		<div class="techno">
+			<img src="img/angular.png" />
+			<p>AngularJS 1.X</p>
+		</div>
+		<div class="techno">
+			<img src="img/node.png" />
+			<p>NodeJS</p>
+		</div>
+		<div class="techno">
+			<img src="img/HTMLCSS.png" />
+			<p>Web front-end stuff</p>
+		</div>
+		<div class="techno">
+			<p>Git, NPM/Bower<br>SQL, MongoDB<br>Grunt, Docker<br>JQuery, Lodash<br>Java</p>
+		</div>
 	</div>
 </div>
 </body>
