Add email contact

--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
 					<span class="in subbubble btnnoh"></span>
 					<span class="inh subbubble btnh"></span>
 				</a>
+				<a href="&#109;&#097;&#105;&#108;&#116;&#111;:&#108;&#101;&#111;&#110;&#097;&#114;&#100;&#064;&#097;&#108;&#108;&#097;&#105;&#110;&#045;&#108;&#097;&#117;&#110;&#097;&#121;&#046;&#102;&#114;" class="bubble" target="_blank">
+					<span class="mail subbubble btnnoh"></span>
+					<span class="mailh subbubble btnh"></span>
+				</a>
 				<a href="http://www.codingame.com/profile/1f902a3213291dfd0de802207d362bdf979991" class="bubble" target="_blank">
 					<span class="cg subbubble btnnoh"></span>
 					<span class="cgh subbubble btnh"></span>
@@ -37,6 +41,7 @@
 	<div class="meta_wrap">
 		<p class="meta">Hi, I'm Leonard. A software developer based in San Francisco. I am currently a Growth Engineer at <a href="https://www.codingame.com">CodinGame</a>.</p>
 	</div>
+
 	<div class="technologies">
 		<div class="techno">
 			<img src="img/angular.png" />
