Add work and education info

--- a/index.html
+++ b/index.html
@@ -38,11 +38,12 @@
 		</div>
 
 	</div>
-	<div class="meta_wrap">
-		<p class="meta">Hi, I'm Leonard. A software developer based in San Francisco. I am currently a Growth Engineer at <a href="https://www.codingame.com">CodinGame</a>.</p>
+	<h2>Who I am</h2>
+	<div class="meta_wrap block">
+		<p class="meta">Hi, I'm Leonard. A software developer based in San Francisco. I am currently a Growth Engineer at <a href="https://www.codingame.com">CodinGame</a>. I am French, I like music, I like to code, and much more. Feel free to drop me a line :)</p>
 	</div>
-
-	<div class="technologies">
+	<h2>What I do</h2>
+	<div class="technologies block">
 		<div class="techno">
 			<img src="img/angular.png" />
 			<p>AngularJS 1.X</p>
@@ -57,6 +58,52 @@
 		</div>
 		<div class="techno">
 			<p>Git, NPM/Bower<br>SQL, MongoDB<br>Grunt, Docker<br>JQuery, Lodash<br>Java</p>
+		</div>
+	</div>
+	<h2>What I did</h2>
+	<div class="work_wrap block">
+		<div class="work">
+			<img class="logo" src="img/codingame.png" />
+			<div class="job">
+				<h3>Growth Engineer at CodinGame</h3>
+				<h4>October 2016 - Present</h4>
+				<p>Implementing tech strategies to boost growth, and tech solutions like the sales stack (automated lead generation and qualification). CodinGame is on online platform for developpers with courses and programming challenges/contests.</p>
+			</div>
+		</div>
+		<div class="work">
+			<img class="logo" src="img/codingame.png" />
+			<div class="job">
+				<h3>Full Stack intern at CodinGame</h3>
+				<h4>April 2016 - September 2016</h4>
+				<p>Developing features for the CodinGame platform, using Angular/HTML5/SASS on the front-end, Java J2EE and Lua on the back-end. CodinGame is on online platform for developpers with courses and programming challenges/contests.</p>
+			</div>
+		</div>
+		<div class="work">
+			<img class="logo" src="img/speakplus.jpg" />
+			<div class="job">
+				<h3>Full Stack intern at SpeakPlus</h3>
+				<h4>May 2015 - September 2015</h4>
+				<p>Implementing features for the SpeakPlus platform, using the MEAN stack (MongoDB, Express, Angular, Node). SpeakPlus does online one-to-one language courses.</p>
+			</div>
+		</div>
+		<div class="work">
+			<img class="logo" src="img/codingame.png" />
+			<div class="job">
+				<h3>Full Stack intern at CodinGame</h3>
+				<h4>June 2014 - September 2014</h4>
+				<p>Developing features for the CodinGame platform, using Angular/HTML5/SASS on the front-end, Java J2EE and Lua on the back-end. CodinGame is on online platform for developpers with courses and programming challenges/contests.</p>
+			</div>
+		</div>
+	</div>
+	<h2>What I Learned</h2>
+	<div class="work_wrap block">
+		<div class="work">
+			<img class="logo" src="img/insa.jpg" />
+			<div class="job">
+				<h3>Master degree in Computer Science at INSA Lyon, France</h3>
+				<h4>Graduated 2016</h4>
+				<p>Five years engineering degree in computer science and software development, the main courses included programming (C++, Java), algorithms, Cloud (docker, ansible, automation), version control</p>
+			</div>
 		</div>
 	</div>
 </div>
