Links and details

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<span class="github subbubble btnnoh"></span>
 					<span class="githubh subbubble btnh"></span>
 				</a>
-				<a href="http://linkedin.com/pub/l%C3%A9onard-allain-launay/86/a38/2a1/" class="bubble" target="_blank">
+				<a href="https://www.linkedin.com/in/leonard-allain-launay-2a1a3886" class="bubble" target="_blank">
 					<span class="in subbubble btnnoh"></span>
 					<span class="inh subbubble btnh"></span>
 				</a>
@@ -65,15 +65,15 @@
 		<div class="work">
 			<img class="logo" src="img/codingame.png" />
 			<div class="job">
-				<h3>Growth Engineer at CodinGame</h3>
+				<h3>Growth Engineer at <a href="https://www.codingame.com" target="_blank">CodinGame</a></h3>
 				<h4>October 2016 - Present</h4>
-				<p>Implementing tech strategies to boost growth, and tech solutions like the sales stack (automated lead generation and qualification). CodinGame is on online platform for developpers with courses and programming challenges/contests.</p>
+				<p>Implementing tech strategies to boost growth, and tech solutions like the sales stack (automated lead generation and qualification), evangelism in San Francisco. CodinGame is on online platform for developpers with courses and programming challenges/contests.</p>
 			</div>
 		</div>
 		<div class="work">
 			<img class="logo" src="img/codingame.png" />
 			<div class="job">
-				<h3>Full Stack intern at CodinGame</h3>
+				<h3>Full Stack intern at <a href="https://www.codingame.com" target="_blank">CodinGame</a></h3>
 				<h4>April 2016 - September 2016</h4>
 				<p>Developing features for the CodinGame platform, using Angular/HTML5/SASS on the front-end, Java J2EE and Lua on the back-end. CodinGame is on online platform for developpers with courses and programming challenges/contests.</p>
 			</div>
@@ -81,7 +81,7 @@
 		<div class="work">
 			<img class="logo" src="img/speakplus.jpg" />
 			<div class="job">
-				<h3>Full Stack intern at SpeakPlus</h3>
+				<h3>Full Stack intern at <a href="https://www.speakplus.fr" target="_blank">SpeakPlus</a></h3>
 				<h4>May 2015 - September 2015</h4>
 				<p>Implementing features for the SpeakPlus platform, using the MEAN stack (MongoDB, Express, Angular, Node). SpeakPlus does online one-to-one language courses.</p>
 			</div>
@@ -89,7 +89,7 @@
 		<div class="work">
 			<img class="logo" src="img/codingame.png" />
 			<div class="job">
-				<h3>Full Stack intern at CodinGame</h3>
+				<h3>Full Stack intern at <a href="https://www.codingame.com" target="_blank">CodinGame</a></h3>
 				<h4>June 2014 - September 2014</h4>
 				<p>Developing features for the CodinGame platform, using Angular/HTML5/SASS on the front-end, Java J2EE and Lua on the back-end. CodinGame is on online platform for developpers with courses and programming challenges/contests.</p>
 			</div>
