Add stylesheet specific for printing

--- a/index.html
+++ b/index.html
@@ -5,42 +5,52 @@
 <link href="http://fonts.googleapis.com/css?family=Lato:300,400,900" rel="stylesheet" type="text/css">
 <link href="http://fonts.googleapis.com/css?family=Inconsolata:400,700" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="style.css">
+<link rel="stylesheet" media="print" href="impress.css">
 
 <title>Léonard Allain-Launay (LeonardA-L) 's hub</title>
 </head>
 <body>
 	<div class="hShadow"></div>
 
+	<div class="main-title">
+		<h1>Leonard Allain-Launay</h1>
+		<a href="mailto:leonard@allain-launay.fr">leonard@allain-launay.fr</a><br>
+		+33 6 85 21 11 47<br>
+		<a href="https://LeonardA-L.github.io">https://LeonardA-L.github.io</a>
+	</div>
+
 	<div class="circle shadow">
 
 		<div class="part">
-			<h1>Leonard Allain-Launay</h1>
-			<div class="bubbles">
+			<div class="header">
+				<h1>Leonard Allain-Launay</h1>
+				<div class="bubbles">
+					
+					<a href="https://github.com/LeonardA-L" target="_blank" class="bubble">
+						<span class="github subbubble btnnoh"></span>
+						<span class="githubh subbubble btnh"></span>
+					</a>
+					<a href="https://www.linkedin.com/in/leonard-allain-launay-2a1a3886" class="bubble" target="_blank">
+						<span class="in subbubble btnnoh"></span>
+						<span class="inh subbubble btnh"></span>
+					</a>
+					<a href="&#109;&#097;&#105;&#108;&#116;&#111;:&#108;&#101;&#111;&#110;&#097;&#114;&#100;&#064;&#097;&#108;&#108;&#097;&#105;&#110;&#045;&#108;&#097;&#117;&#110;&#097;&#121;&#046;&#102;&#114;" class="bubble" target="_blank">
+						<span class="mail subbubble btnnoh"></span>
+						<span class="mailh subbubble btnh"></span>
+					</a>
+					<a href="http://www.codingame.com/profile/1f902a3213291dfd0de802207d362bdf979991" class="bubble" target="_blank">
+						<span class="cg subbubble btnnoh"></span>
+						<span class="cgh subbubble btnh"></span>
+					</a>
 				
-				<a href="https://github.com/LeonardA-L" target="_blank" class="bubble">
-					<span class="github subbubble btnnoh"></span>
-					<span class="githubh subbubble btnh"></span>
-				</a>
-				<a href="https://www.linkedin.com/in/leonard-allain-launay-2a1a3886" class="bubble" target="_blank">
-					<span class="in subbubble btnnoh"></span>
-					<span class="inh subbubble btnh"></span>
-				</a>
-				<a href="&#109;&#097;&#105;&#108;&#116;&#111;:&#108;&#101;&#111;&#110;&#097;&#114;&#100;&#064;&#097;&#108;&#108;&#097;&#105;&#110;&#045;&#108;&#097;&#117;&#110;&#097;&#121;&#046;&#102;&#114;" class="bubble" target="_blank">
-					<span class="mail subbubble btnnoh"></span>
-					<span class="mailh subbubble btnh"></span>
-				</a>
-				<a href="http://www.codingame.com/profile/1f902a3213291dfd0de802207d362bdf979991" class="bubble" target="_blank">
-					<span class="cg subbubble btnnoh"></span>
-					<span class="cgh subbubble btnh"></span>
-				</a>
-			
+				</div>
 			</div>
 		</div>
 
 	</div>
 	<h2>Who I am</h2>
 	<div class="meta_wrap block">
-		<p class="meta">Hi, I'm Leonard. A software developer based in San Francisco. I am currently a Growth Engineer at <a href="https://www.codingame.com">CodinGame</a>. I am French, I like music, I like to code, and much more. Feel free to drop me a line :)</p>
+		<p class="meta">Hi, I'm Leonard. A software developer based in San Francisco. I am currently a Growth Engineer at <a href="https://www.codingame.com">CodinGame</a>. I am French, I like music, I like to code, and much more. Feel free to drop me a line :) Hi, I'm Leonard. A software developer based in San Francisco. I am currently a Growth Engineer at <a href="https://www.codingame.com">CodinGame</a>. I am French, I like music, I like to code, and much more. Feel free to drop me a line :)</p>
 	</div>
 	<h2>What I do</h2>
 	<div class="technologies block">
@@ -59,6 +69,14 @@
 		<div class="techno">
 			<p>Git, NPM/Bower<br>SQL, MongoDB<br>Grunt, Docker<br>JQuery, Lodash<br>Java</p>
 		</div>
+	</div>
+	<div class="hr"></div>
+	<div>
+		<span class="locale">French</span><span class="locale-level">Native</span><span class="dot">&#x2022;</span>
+		<span class="locale">English</span><span class="locale-level">Bilingual</span><span class="dot">&#x2022;</span>
+		<span class="locale">German</span><span class="locale-level">Good</span>
+	</div>
+	<div class="hr">
 	</div>
 	<h2>What I did</h2>
 	<div class="work_wrap block">
