Remove duplicate text

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 	</div>
 	<h2>Who I am</h2>
 	<div class="meta_wrap block">
-		<p class="meta">Hi, I'm Leonard. A software developer based in San Francisco. I am currently a Growth Engineer at <a href="https://www.codingame.com">CodinGame</a>. I am French, I like music, I like to code, and much more. Feel free to drop me a line :) Hi, I'm Leonard. A software developer based in San Francisco. I am currently a Growth Engineer at <a href="https://www.codingame.com">CodinGame</a>. I am French, I like music, I like to code, and much more. Feel free to drop me a line :)</p>
+		<p class="meta">Hi, I'm Leonard. A software developer based in San Francisco. I am currently a Growth Engineer at <a href="https://www.codingame.com">CodinGame</a>. I am French, I like music, I like to code, and much more. Feel free to drop me a line :)</p>
 	</div>
 	<h2>What I do</h2>
 	<div class="technologies block">
