Add game related techs

--- a/index.html
+++ b/index.html
@@ -55,19 +55,19 @@
 	<h2>What I do</h2>
 	<div class="technologies block">
 		<div class="techno">
-			<img src="img/angular.png" />
-			<p>AngularJS 1.X</p>
+			<img src="img/unity.png" />
+			<p>Unity</p>
 		</div>
 		<div class="techno">
-			<img src="img/node.png" />
-			<p>NodeJS</p>
+			<img src="img/c-sharp.png" />
+			<p>C#</p>
 		</div>
 		<div class="techno">
-			<img src="img/HTMLCSS.png" />
-			<p>Web front-end stuff</p>
+			<img src="img/webgl_logo.png" />
+			<p>Web games, WebGL, Pixi.js</p>
 		</div>
 		<div class="techno">
-			<p>Git, NPM/Bower<br>SQL, MongoDB<br>Grunt, Docker<br>JQuery, Lodash<br>Java</p>
+			<p>Java, JavaScript<br>Web full stack<br>Angular, Node<br>SQL, MongoDB<br>git, Docker<br>
 		</div>
 	</div>
 	<div class="hr"></div>
