--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
 		</div>
 
 	</div>
-	<h2>Who I am</h2>
+	<!--<h2>Qui suis-je</h2>-->
 	<div class="meta_wrap block">
-		<p class="meta">Hi, I'm Leonard. A software developer based in San Francisco. I am currently a Growth Engineer at <a href="https://www.codingame.com">CodinGame</a>. I am French, I like music, I like to code, and much more. Feel free to drop me a line :)</p>
+		<p class="meta"><b>Ingénieur INSA Lyon, spécialité informatique</b>, travaillant à San Francisco depuis un an, j'intègre le Mastère spécialisé Enjmin-Gobelins en Septembre 2017. Je suis actuellement en recherche d'un contrat de professionalisation dans un studio pour une alternance.</p>
 	</div>
-	<h2>What I do</h2>
+	<h2>Technologies</h2>
 	<div class="technologies block">
 		<div class="techno">
 			<img src="img/unity.png" />
@@ -78,7 +78,7 @@
 	</div>
 	<div class="hr">
 	</div>
-	<h2>What I did</h2>
+	<h2>Expériences professionnelles</h2>
 	<div class="work_wrap block">
 		<div class="work">
 			<img class="logo" src="img/codingame.png" />
@@ -113,7 +113,7 @@
 			</div>
 		</div>
 	</div>
-	<h2>What I Learned</h2>
+	<h2>Education</h2>
 	<div class="work_wrap block">
 		<div class="work">
 			<img class="logo" src="img/insa.jpg" />
@@ -121,6 +121,25 @@
 				<h3>Master degree in Computer Science at INSA Lyon, France</h3>
 				<h4>Graduated 2016</h4>
 				<p>Five years engineering degree in computer science and software development, the main courses included programming (C++, Java), algorithms, Cloud (docker, ansible, automation), version control</p>
+			</div>
+		</div>
+	</div>
+	<h2>Projects</h2>
+	<div class="project_wrap block">
+		<div class="project">
+			<img class="logo" src="img/crapette.jpg" />
+			<div class="job">
+				<h3>Crapette</h3>
+				<h4>Angular, Node, Websockets</h4>
+				<p>Traditional French card game. Playable online for two players.</p>
+			</div>
+		</div>
+		<div class="project">
+			<img class="logo" src="img/htck.jpg" />
+			<div class="job">
+				<h3>HTCK</h3>
+				<h4>Angular, JavaScript</h4>
+				<p>Allows users to create their own version of the Bayeux tapestry and export as JPG or animated GIF.</p>
 			</div>
 		</div>
 	</div>
