--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
 	</div>
 	<div class="hr"></div>
 	<div>
-		<span class="locale">French</span><span class="locale-level">Native</span><span class="dot">&#x2022;</span>
-		<span class="locale">English</span><span class="locale-level">Bilingual</span><span class="dot">&#x2022;</span>
-		<span class="locale">German</span><span class="locale-level">Good</span>
+		<span class="locale">Français</span><span class="locale-level">Natif</span><span class="dot">&#x2022;</span>
+		<span class="locale">Anglais</span><span class="locale-level">Bilingue</span><span class="dot">&#x2022;</span>
+		<span class="locale">Allemand</span><span class="locale-level">Bon</span>
 	</div>
 	<div class="hr">
 	</div>
@@ -83,33 +83,33 @@
 		<div class="work">
 			<img class="logo" src="img/codingame.png" />
 			<div class="job">
-				<h3>Growth Engineer at <a href="https://www.codingame.com" target="_blank">CodinGame</a></h3>
-				<h4>October 2016 - Present</h4>
-				<p>Implementing tech strategies to boost growth, and tech solutions like the sales stack (automated lead generation and qualification), evangelism in San Francisco. CodinGame is on online platform for developpers with courses and programming challenges/contests.</p>
+				<h3>Growth Engineer à <a href="https://www.codingame.com" target="_blank">CodinGame</a></h3>
+				<h4>Octobre 2016 - Présent</h4>
+				<p>Implémentation de solution techniques pour améliorer la croissance de l'entreprise à San Francisco. Travail sur la stratégie de la startup. CodinGame est une plateforme de gaming en ligne pour développeurs proposant des jeux et concours de programmation.</p>
 			</div>
 		</div>
 		<div class="work">
 			<img class="logo" src="img/codingame.png" />
 			<div class="job">
-				<h3>Full Stack intern at <a href="https://www.codingame.com" target="_blank">CodinGame</a></h3>
-				<h4>April 2016 - September 2016</h4>
-				<p>Developing features for the CodinGame platform, using Angular/HTML5/SASS on the front-end, Java J2EE and Lua on the back-end. CodinGame is on online platform for developpers with courses and programming challenges/contests.</p>
+				<h3>Full Stack intern à <a href="https://www.codingame.com" target="_blank">CodinGame</a></h3>
+				<h4>Avril 2016 - Septembre 2016</h4>
+				<p>Développement de jeu et feature sur la plateforme CodinGame, avec Pixi.js, Angular/HTML5/SASS pour le frontend, Java et Lua pour le backend.</p>
 			</div>
 		</div>
 		<div class="work">
 			<img class="logo" src="img/speakplus.jpg" />
 			<div class="job">
-				<h3>Full Stack intern at <a href="https://www.speakplus.fr" target="_blank">SpeakPlus</a></h3>
-				<h4>May 2015 - September 2015</h4>
-				<p>Implementing features for the SpeakPlus platform, using the MEAN stack (MongoDB, Express, Angular, Node). SpeakPlus does online one-to-one language courses.</p>
+				<h3>Full Stack intern à <a href="https://www.speakplus.fr" target="_blank">SpeakPlus</a></h3>
+				<h4>Mai 2015 - Septembre 2015</h4>
+				<p>Implémentation de features sur la plateforme SpeakPlus, avec la stack MEAN (MongoDB, Express, Angular, Node). Speakplus propose des cours de langue en visio-conférence.</p>
 			</div>
 		</div>
 		<div class="work">
 			<img class="logo" src="img/codingame.png" />
 			<div class="job">
-				<h3>Full Stack intern at <a href="https://www.codingame.com" target="_blank">CodinGame</a></h3>
-				<h4>June 2014 - September 2014</h4>
-				<p>Developing features for the CodinGame platform, using Angular/HTML5/SASS on the front-end, Java J2EE and Lua on the back-end. CodinGame is on online platform for developpers with courses and programming challenges/contests.</p>
+				<h3>Full Stack intern à <a href="https://www.codingame.com" target="_blank">CodinGame</a></h3>
+				<h4>Juin 2014 - Septembre 2014</h4>
+				<p>Développement de jeu et feature sur la plateforme CodinGame, avec Pixi.js, Angular/HTML5/SASS pour le frontend, Java et Lua pour le backend.</p>
 			</div>
 		</div>
 	</div>
@@ -118,28 +118,28 @@
 		<div class="work">
 			<img class="logo" src="img/insa.jpg" />
 			<div class="job">
-				<h3>Master degree in Computer Science at INSA Lyon, France</h3>
-				<h4>Graduated 2016</h4>
-				<p>Five years engineering degree in computer science and software development, the main courses included programming (C++, Java), algorithms, Cloud (docker, ansible, automation), version control</p>
+				<h3>Diplôme d'ingénieur (Master) en Informatique à l'INSA Lyon, France</h3>
+				<h4>Promotion 2016</h4>
+				<p>Programmation, UI/UX, Programmation graphique (OpenGL), Architecture Matérielle, Réseaux, Base de Données, Gestion de projet, Algèbre, ...</p>
 			</div>
 		</div>
 	</div>
-	<h2>Projects</h2>
+	<h2>Projets</h2>
 	<div class="project_wrap block">
 		<div class="project">
 			<img class="logo" src="img/crapette.jpg" />
 			<div class="job">
-				<h3>Crapette</h3>
-				<h4>Angular, Node, Websockets</h4>
-				<p>Traditional French card game. Playable online for two players.</p>
+				<h3><a target="_blank" href="http://LeonardA-L.github.io/crapette/">Crapette</a></h3>
+				<h4>Angular, Node, Websockets. <a target="_blank" href="http://LeonardA-L.github.io/crapette/">http://LeonardA-L.github.io/crapette/</a></h4>
+				<p>Version web du jeu de carte traditionel. Jouable à deux joueurs en ligne.</p>
 			</div>
 		</div>
 		<div class="project">
 			<img class="logo" src="img/htck.jpg" />
 			<div class="job">
-				<h3>HTCK</h3>
-				<h4>Angular, JavaScript</h4>
-				<p>Allows users to create their own version of the Bayeux tapestry and export as JPG or animated GIF.</p>
+				<h3><a target="_blank" href="http://htck.github.io/bayeux/">HTCK</a></h3>
+				<h4>Angular, JavaScript. <a target="_blank" href="http://htck.github.io/bayeux/">http://htck.github.io/bayeux/</a></h4>
+				<p>Permet de créer votre propre version de la tapisserie de Bayeux, exportée en JPG ou GIF animé.</p>
 			</div>
 		</div>
 	</div>
