--- a/index_fr.html
+++ b/index_fr.html
@@ -46,7 +46,7 @@
 					</a>
 				
 				</div>
-				<div class="changeLang"><a href="index_fr.html">Voir en Français</a></div>
+				<div class="changeLang"><a href="index.html">See in English</a></div>
 			</div>
 		</div>
 
@@ -75,52 +75,52 @@
 	</div>
 	<div class="hr"></div>
 	<div>
-		<span class="locale">French</span><span class="locale-level">Native</span><span class="dot">&#x2022;</span>
-		<span class="locale">English</span><span class="locale-level">Bilingual</span><span class="dot">&#x2022;</span>
-		<span class="locale">German</span><span class="locale-level">B2</span>
+		<span class="locale">Français</span><span class="locale-level">Natif</span><span class="dot">&#x2022;</span>
+		<span class="locale">Anglais</span><span class="locale-level">Bilingue</span><span class="dot">&#x2022;</span>
+		<span class="locale">Allemand</span><span class="locale-level">Bon</span>
 	</div>
 	<div class="hr">
 	</div>
-	<h2>Work Experience</h2>
+	<h2>Expériences professionnelles</h2>
 	<div class="work_wrap block">
 		<div class="work">
 			<img class="logo" src="img/wild.jpg" />
 			<div class="job">
-				<h3>Gameplay Programmer at <a href="https://wildsheepstudio.com/" target="_blank">Wild Sheep Studio</a></h3>
-				<h4>September 2017 - Present</h4>
-				<p>Gameplay programming on <em>Wild</em>.</p>
+				<h3>Gameplay Programmer à <a href="https://wildsheepstudio.com/" target="_blank">Wild Sheep Studio</a></h3>
+				<h4>Septembre 2017 - Présent</h4>
+				<p>Programmation gameplay et 3C sur le jeu Wild.</p>
 			</div>
 		</div>
 		<div class="work">
 			<img class="logo" src="img/codingame.png" />
 			<div class="job">
-				<h3>Growth Engineer at <a href="https://www.codingame.com" target="_blank">CodinGame</a></h3>
-				<h4>October 2016 - July 2017</h4>
-				<p>Implemented technical solutions to drive the growth of the company in San Francisco and the Bay area. Work on the startup's strategy. CodinGame is an online gaming platform for developers, offering programming games and contests.</p>
+				<h3>Growth Engineer à <a href="https://www.codingame.com" target="_blank">CodinGame</a></h3>
+				<h4>Octobre 2016 - Juillet 2017</h4>
+				<p>Implémentation de solution techniques pour améliorer la croissance de l'entreprise à San Francisco. Travail sur la stratégie de la startup. CodinGame est une plateforme de gaming en ligne pour développeurs proposant des jeux et concours de programmation.</p>
 			</div>
 		</div>
 		<div class="work">
 			<img class="logo" src="img/codingame.png" />
 			<div class="job">
-				<h3>Full Stack intern at <a href="https://www.codingame.com" target="_blank">CodinGame</a></h3>
-				<h4>April 2016 - September 2016</h4>
-				<p>Developed games and features for the CodinGame platform, with Pixi.js, Angular/HTML5/SASS for the frontend part, Java and Lua on the backend.</p>
+				<h3>Full Stack intern à <a href="https://www.codingame.com" target="_blank">CodinGame</a></h3>
+				<h4>Avril 2016 - Septembre 2016</h4>
+				<p>Développement de jeu et feature sur la plateforme CodinGame, avec Pixi.js, Angular/HTML5/SASS pour le frontend, Java et Lua pour le backend.</p>
 			</div>
 		</div>
 		<div class="work">
 			<img class="logo" src="img/speakplus.jpg" />
 			<div class="job">
-				<h3>Full Stack intern at <a href="https://www.speakplus.fr" target="_blank">SpeakPlus</a></h3>
-				<h4>May 2015 - September 2015</h4>
-				<p>Implemented features for the SpeakPlus platform, with the MEAN stack (MongoDB, Express, Angular, Node). SpeakPlus offers 1-on-1 language courses.</p>
+				<h3>Full Stack intern à <a href="https://www.speakplus.fr" target="_blank">SpeakPlus</a></h3>
+				<h4>Mai 2015 - Septembre 2015</h4>
+				<p>Implémentation de features sur la plateforme SpeakPlus, avec la stack MEAN (MongoDB, Express, Angular, Node). Speakplus propose des cours de langue en visio-conférence.</p>
 			</div>
 		</div>
 		<div class="work">
 			<img class="logo" src="img/codingame.png" />
 			<div class="job">
-				<h3>Full Stack intern at <a href="https://www.codingame.com" target="_blank">CodinGame</a></h3>
-				<h4>June 2014 - September 2014</h4>
-				<p>Developed games and features for the CodinGame platform, with Pixi.js, Angular/HTML5/SASS for the frontend part, Java and Lua on the backend.</p>
+				<h3>Full Stack intern à <a href="https://www.codingame.com" target="_blank">CodinGame</a></h3>
+				<h4>Juin 2014 - Septembre 2014</h4>
+				<p>Développement de jeu et feature sur la plateforme CodinGame, avec Pixi.js, Angular/HTML5/SASS pour le frontend, Java et Lua pour le backend.</p>
 			</div>
 		</div>
 	</div>
@@ -129,28 +129,28 @@
 		<div class="work">
 			<img class="logo" src="img/gobelins.jpg" />
 			<div class="job">
-				<h3>Post-Master Video games and Transmedia, Gobelins -- Enjmin</h3>
+				<h3>Mastère Spécialisé Jeux Vidéos et Transmédia, Gobelins -- Enjmin</h3>
 				<h4>Promotion 2018</h4>
-				<p>Game Design, Level Design, Shaders, Game UI/UX</p>
+				<p>Game Design, Level Design, Shaders, Monétisation, Game UI/UX</p>
 			</div>
 		</div>
 		<div class="work">
 			<img class="logo" src="img/insa.jpg" />
 			<div class="job">
-				<h3>Engineering Master Degree at INSA Lyon, France</h3>
+				<h3>Diplôme d'ingénieur (Master) en Informatique à l'INSA Lyon, France</h3>
 				<h4>Promotion 2016</h4>
-				<p>Programming, UI/UX, Graphics programming (OpenGL), Hardware Architecture, Networks, Databases, Project management, Algebra, ...</p>
+				<p>Programmation, UI/UX, Programmation graphique (OpenGL), Architecture Matérielle, Réseaux, Base de Données, Gestion de projet, Algèbre, ...</p>
 			</div>
 		</div>
 	</div>
-	<h2>Projects</h2>
+	<h2>Projets</h2>
 	<div class="project_wrap block">
 		<div class="project">
 			<img class="logo" src="img/crapette.jpg" />
 			<div class="job">
 				<h3><a target="_blank" href="http://LeonardA-L.github.io/crapette/">Crapette</a></h3>
 				<h4>Angular, Node, Websockets. <a target="_blank" href="http://LeonardA-L.github.io/crapette/">http://LeonardA-L.github.io/crapette/</a></h4>
-				<p>Web version of the traditionnal French card game. Playable for two people online.</p>
+				<p>Version web du jeu de carte traditionel. Jouable à deux joueurs en ligne.</p>
 			</div>
 		</div>
 		<div class="project">
@@ -158,7 +158,7 @@
 			<div class="job">
 				<h3><a target="_blank" href="http://htck.github.io/bayeux/">HTCK</a></h3>
 				<h4>Angular, JavaScript. <a target="_blank" href="http://htck.github.io/bayeux/">http://htck.github.io/bayeux/</a></h4>
-				<p>Allows you to create your own version of the Bayeux tapestry, exported as JPG or animated GIF.</p>
+				<p>Permet de créer votre propre version de la tapisserie de Bayeux, exportée en JPG ou GIF animé.</p>
 			</div>
 		</div>
 	</div>
