Add Shrouded Woods WebVR project

--- a/index.html
+++ b/index.html
@@ -145,14 +145,16 @@
 	</div>
 	<h2>Projects</h2>
 	<div class="project_wrap block">
+
 		<div class="project">
-			<img class="logo" src="img/crapette.jpg" />
+			<img class="logo" src="img/ShroudedWoods.jpg" />
 			<div class="job">
-				<h3><a target="_blank" href="http://LeonardA-L.github.io/crapette/">Crapette</a></h3>
-				<h4>Angular, Node, Websockets. <a target="_blank" href="http://LeonardA-L.github.io/crapette/">http://LeonardA-L.github.io/crapette/</a></h4>
-				<p>Web version of the traditionnal French card game. Playable for two people online.</p>
+				<h3><a target="_blank" href="https://leonarda-l.github.io/ShroudedWoods">Shrouded Woods</a></h3>
+				<h4>Unity, WebVR, WebGL <a target="_blank" href="https://leonarda-l.github.io/ShroudedWoods">https://leonarda-l.github.io/ShroudedWoods</a></h4>
+				<p>Small WebVR game, entry (and now <a href="https://medium.com/mozilla-open-innovation/webvr-experience-challenge-winners-announced-5ecfac66c6ac" target="_blank">winner of a honorable mention</a>) in <a href="https://challenges.mozilla.community/webvr-challenge/" target="_blank">Mozilla's WebVR Experience Challenge</a>.</p>
 			</div>
 		</div>
+		
 		<div class="project">
 			<img class="logo" src="img/htck.jpg" />
 			<div class="job">
@@ -161,6 +163,16 @@
 				<p>Allows you to create your own version of the Bayeux tapestry, exported as JPG or animated GIF.</p>
 			</div>
 		</div>
+
+		<div class="project">
+			<img class="logo" src="img/crapette.jpg" />
+			<div class="job">
+				<h3><a target="_blank" href="http://LeonardA-L.github.io/crapette/">Crapette</a></h3>
+				<h4>Angular, Node, Websockets. <a target="_blank" href="http://LeonardA-L.github.io/crapette/">http://LeonardA-L.github.io/crapette/</a></h4>
+				<p>Web version of the traditionnal French card game. Playable for two people online.</p>
+			</div>
+		</div>
+
 	</div>
 </div>
 </body>
