--- a/index_fr.html
+++ b/index_fr.html
@@ -145,20 +145,31 @@
 	</div>
 	<h2>Projets</h2>
 	<div class="project_wrap block">
+
 		<div class="project">
-			<img class="logo" src="img/crapette.jpg" />
+			<img class="logo" src="img/ShroudedWoods.jpg" />
 			<div class="job">
-				<h3><a target="_blank" href="http://LeonardA-L.github.io/crapette/">Crapette</a></h3>
-				<h4>Angular, Node, Websockets. <a target="_blank" href="http://LeonardA-L.github.io/crapette/">http://LeonardA-L.github.io/crapette/</a></h4>
-				<p>Version web du jeu de carte traditionel. Jouable à deux joueurs en ligne.</p>
+				<h3><a target="_blank" href="https://leonarda-l.github.io/ShroudedWoods">Shrouded Woods</a></h3>
+				<h4>Unity, WebVR, WebGL <a target="_blank" href="https://leonarda-l.github.io/ShroudedWoods">https://leonarda-l.github.io/ShroudedWoods</a></h4>
+				<p>Petit jeu en WebVR pour le <a href="https://challenges.mozilla.community/webvr-challenge/" target="_blank">Mozilla WebVR Experience Challenge</a> (a remporté une <a href="https://medium.com/mozilla-open-innovation/webvr-experience-challenge-winners-announced-5ecfac66c6ac" target="_blank">mention honorable</a>).</p>
 			</div>
 		</div>
+
 		<div class="project">
 			<img class="logo" src="img/htck.jpg" />
 			<div class="job">
 				<h3><a target="_blank" href="http://htck.github.io/bayeux/">HTCK</a></h3>
 				<h4>Angular, JavaScript. <a target="_blank" href="http://htck.github.io/bayeux/">http://htck.github.io/bayeux/</a></h4>
 				<p>Permet de créer votre propre version de la tapisserie de Bayeux, exportée en JPG ou GIF animé.</p>
+			</div>
+		</div>
+
+		<div class="project">
+			<img class="logo" src="img/crapette.jpg" />
+			<div class="job">
+				<h3><a target="_blank" href="http://LeonardA-L.github.io/crapette/">Crapette</a></h3>
+				<h4>Angular, Node, Websockets. <a target="_blank" href="http://LeonardA-L.github.io/crapette/">http://LeonardA-L.github.io/crapette/</a></h4>
+				<p>Version web du jeu de carte traditionel. Jouable à deux joueurs en ligne.</p>
 			</div>
 		</div>
 	</div>
