Add VBG and freshen up style

--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
 		<a href="https://LeonardA-L.github.io">https://LeonardA-L.github.io</a>
 	</div>
 
-	<div class="circle shadow">
+	<div class="head shadow">
+
+		<div class="part photo">
+		</div>
 
 		<div class="part">
 			<div class="header">
@@ -55,6 +58,8 @@
 	<div class="meta_wrap block">
 		<p class="meta"><b>Développeur</b>, travaillant actuellement chez Wild Sheep Studio en tant que Gameplay Programmer pour le jeu Wild.</p>
 	</div>
+	<h2>Latest Side-Project: <i>Very Bad Greeks</i> <a href="https://verybadgreeks.itch.io/very-bad-greeks" target="_blank">(play on itch.io)</a></h2>
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/ds1YAITA1Tk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	<h2>Technologies</h2>
 	<div class="technologies block">
 		<div class="techno">
@@ -94,7 +99,7 @@
 		<div class="work">
 			<img class="logo" src="img/codingame.png" />
 			<div class="job">
-				<h3>Growth Engineer at <a href="https://www.codingame.com" target="_blank">CodinGame</a></h3>
+				<h3>Growth Engineer at <a href="https://www.codingame.com" target="_blank">CodinGame</a> San Francisco</h3>
 				<h4>October 2016 - July 2017</h4>
 				<p>Implemented technical solutions to drive the growth of the company in San Francisco and the Bay area. Work on the startup's strategy. CodinGame is an online gaming platform for developers, offering programming games and contests.</p>
 			</div>
@@ -145,6 +150,15 @@
 	</div>
 	<h2>Projects</h2>
 	<div class="project_wrap block">
+
+		<div class="project">
+			<img class="logo" src="img/VBG_Concept.jpg" />
+			<div class="job">
+				<h3><a target="_blank" href="https://verybadgreeks.itch.io/very-bad-greeks">Very Bad Greeks</a></h3>
+				<h4>Unity, C# <a target="_blank" href="https://verybadgreeks.itch.io/very-bad-greeks">https://verybadgreeks.itch.io/very-bad-greeks</a></h4>
+				<p>Multiplayer coop game. Very Bad Greeks has you play as four Greek Gods, fallen into modern Greece, in a challenging mix of hack'n'slash and puzzle game.</p>
+			</div>
+		</div>
 
 		<div class="project">
 			<img class="logo" src="img/ShroudedWoods.jpg" />
