--- a/index_fr.html
+++ b/index_fr.html
@@ -20,12 +20,15 @@
 		<a href="https://LeonardA-L.github.io">https://LeonardA-L.github.io</a>
 	</div>
 
-	<div class="circle shadow">
+	<div class="head shadow">
+
+		<div class="part photo">
+		</div>
 
 		<div class="part">
 			<div class="header">
 				<h1>Leonard Allain-Launay</h1>
-				<h2>Gameplay Programmer</h2>
+				<h2>Programmeur Gameplay</h2>
 				<div class="bubbles">
 					
 					<a href="https://github.com/LeonardA-L" target="_blank" class="bubble">
@@ -46,7 +49,7 @@
 					</a>
 				
 				</div>
-				<div class="changeLang"><a href="index.html">See in English</a></div>
+				<div class="changeLang"><a href="index.html">English version</a></div>
 			</div>
 		</div>
 
@@ -55,6 +58,8 @@
 	<div class="meta_wrap block">
 		<p class="meta"><b>Développeur</b>, travaillant actuellement chez Wild Sheep Studio en tant que Gameplay Programmer pour le jeu Wild.</p>
 	</div>
+	<h2>Dernier Projet : <i>Very Bad Greeks</i> <a href="https://verybadgreeks.itch.io/very-bad-greeks" target="_blank">(jouer sur itch.io)</a></h2>
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/ds1YAITA1Tk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	<h2>Technologies</h2>
 	<div class="technologies block">
 		<div class="techno">
@@ -145,6 +150,15 @@
 	</div>
 	<h2>Projets</h2>
 	<div class="project_wrap block">
+
+		<div class="project">
+			<img class="logo" src="img/VBG_Concept.jpg" />
+			<div class="job">
+				<h3><a target="_blank" href="https://verybadgreeks.itch.io/very-bad-greeks">Very Bad Greeks</a></h3>
+				<h4>Unity, C# <a target="_blank" href="https://verybadgreeks.itch.io/very-bad-greeks">https://verybadgreeks.itch.io/very-bad-greeks</a></h4>
+				<p>Jeu coopératif multi-joueurs. Incarnez quatre dieux grecs projetés au milieu de la Grèce moderne, dans un jeu mixant beat them all et puzzle game.</p>
+			</div>
+		</div>
 
 		<div class="project">
 			<img class="logo" src="img/ShroudedWoods.jpg" />
