--- a/index_fr.html
+++ b/index_fr.html
@@ -8,6 +8,17 @@
 <link rel="stylesheet" media="print" href="impress.css">
 
 <title>Léonard Allain-Launay (LeonardA-L) 's hub</title>
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-132228022-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-132228022-1');
+</script>
+
 </head>
 <body>
 	<div class="hShadow"></div>
